sharding corrected redundancy issue

--- a/sharding.ipynb
+++ b/sharding.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/7pJ+bgp4DbWJgMqzG0wK",
+      "authorship_tag": "ABX9TyPHeJFZUAnO1CQg8F8Gg/8N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,12 +41,29 @@
         "    (5, 'Ethan', 'EU')\n",
         "]\n",
         "\n",
+        "# Dropping Tables to avoid redundancy from each regional databases\n",
+        "conn = sqlite3.connect(\"users_asia.db\")\n",
+        "cursor = conn.cursor()\n",
+        "cursor.execute('''\n",
+        "    DROP TABLE Users''')\n",
         "\n",
+        "# Dropping Tables to avoid redundancy from each regional databases\n",
+        "conn = sqlite3.connect(\"users_us.db\")\n",
+        "cursor = conn.cursor()\n",
+        "cursor.execute('''\n",
+        "    DROP TABLE Users''')\n",
+        "\n",
+        "# Dropping Tables to avoid redundancy from each regional databases\n",
+        "conn = sqlite3.connect(\"users_eu.db\")\n",
+        "cursor = conn.cursor()\n",
+        "cursor.execute('''\n",
+        "    DROP TABLE Users''')\n",
         "\n",
         "\n",
         "# Create a function to insert into the right shard\n",
         "def insert_user(user_id, name, region):\n",
         "    db_name = f\"users_{region.lower()}.db\"\n",
+        "    #print(db_name)\n",
         "    conn = sqlite3.connect(db_name)\n",
         "    cursor = conn.cursor()\n",
         "\n",
@@ -70,7 +87,6 @@
         "for user in users:\n",
         "    insert_user(*user)\n",
         "\n",
-        "insert_user(1, 'Alice', 'US')\n",
         "print(\"Connecting to database in US\")\n",
         "conn = sqlite3.connect('users_us.db')\n",
         "cursor = conn.cursor()\n",
@@ -91,9 +107,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bz3o9kYfhNon",
-        "outputId": "a206457c-d8b4-4dd4-98c9-b890e1033ded"
+        "outputId": "6ce8a9fd-ca4d-47d7-940b-b886cd10ddba"
       },
-      "execution_count": 10,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,11 +120,10 @@
             "User Charlie inserted into users_us.db\n",
             "User Diana inserted into users_asia.db\n",
             "User Ethan inserted into users_eu.db\n",
-            "User Alice inserted into users_us.db\n",
             "Connecting to database in US\n",
-            "[(1, 'Alice', 'US'), (1, 'Alice', 'US'), (3, 'Charlie', 'US'), (1, 'Alice', 'US')]\n",
+            "[(1, 'Alice', 'US'), (3, 'Charlie', 'US')]\n",
             "Connecting to database in EU\n",
-            "[(5, 'Ethan', 'EU'), (2, 'Bob', 'EU'), (5, 'Ethan', 'EU')]\n"
+            "[(2, 'Bob', 'EU'), (5, 'Ethan', 'EU')]\n"
           ]
         }
       ]
